fluxcd/infrastructure/configs/overlays/production/istio-policies/hyrule-castle/allow-apt-cacher-ng-loadbalancer.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-apt-cacher-ng-loadbalancer
spec:
  selector:
    matchLabels:
      app: apt-cacher-ng
  action: ALLOW
  rules:
    - from:
        - source:
            ipBlocks:
              - "10.0.0.0/8"
              - "172.16.0.0/12"
              - "192.168.0.0/16"
            notIpBlocks:
              - "192.168.144.0/20"  # exclude pod CIDR
      to:
        - operation:
            ports: ["3142"]
